@@ -1,0 +1,76 @@
+[
+    {
+        "@timestamp": "2017-07-31T13:36:43.000Z", 
+        "event.dataset": "log", 
+        "event.module": "postgresql", 
+        "input.type": "log", 
+        "log.offset": 0, 
+        "message": "2017-07-31 13:36:43 EST [835-1] LOG:  autovacuum launcher started", 
+        "postgresql.log.core_id": "1", 
+        "postgresql.log.level": "LOG", 
+        "postgresql.log.message": "autovacuum launcher started", 
+        "postgresql.log.thread_id": "835", 
+        "postgresql.log.timestamp": "2017-07-31 13:36:43", 
+        "postgresql.log.timezone": "EST"
+    }, 
+    {
+        "@timestamp": "2017-07-31T13:36:44.000Z", 
+        "event.dataset": "log", 
+        "event.module": "postgresql", 
+        "input.type": "log", 
+        "log.offset": 66, 
+        "message": "2017-07-31 13:36:44 EST [832-1] LOG:  checkpoints are occurring too frequently (25 seconds apart)", 
+        "postgresql.log.core_id": "1", 
+        "postgresql.log.level": "LOG", 
+        "postgresql.log.message": "checkpoints are occurring too frequently (25 seconds apart)", 
+        "postgresql.log.thread_id": "832", 
+        "postgresql.log.timestamp": "2017-07-31 13:36:44", 
+        "postgresql.log.timezone": "EST"
+    }, 
+    {
+        "@timestamp": "2017-07-31T13:46:02.000Z", 
+        "event.dataset": "log", 
+        "event.module": "postgresql", 
+        "input.type": "log", 
+        "log.offset": 164, 
+        "message": "2017-07-31 13:46:02 EST [832-2] HINT:  Consider increasing the configuration parameter \"max_wal_size\".", 
+        "postgresql.log.core_id": "2", 
+        "postgresql.log.level": "HINT", 
+        "postgresql.log.message": "Consider increasing the configuration parameter \"max_wal_size\".", 
+        "postgresql.log.thread_id": "832", 
+        "postgresql.log.timestamp": "2017-07-31 13:46:02", 
+        "postgresql.log.timezone": "EST"
+    }, 
+    {
+        "@timestamp": "2017-07-31T13:46:23.000Z", 
+        "event.dataset": "log", 
+        "event.module": "postgresql", 
+        "input.type": "log", 
+        "log.offset": 267, 
+        "message": "2017-07-31 13:46:23 EST [768-1] postgres@postgres FATAL:  the database system is starting up", 
+        "postgresql.log.core_id": "1", 
+        "postgresql.log.database": "postgres", 
+        "postgresql.log.level": "FATAL", 
+        "postgresql.log.message": "the database system is starting up", 
+        "postgresql.log.thread_id": "768", 
+        "postgresql.log.timestamp": "2017-07-31 13:46:23", 
+        "postgresql.log.timezone": "EST", 
+        "postgresql.log.user": "postgres"
+    }, 
+    {
+        "@timestamp": "2017-07-31T13:46:55.000Z", 
+        "event.dataset": "log", 
+        "event.module": "postgresql", 
+        "input.type": "log", 
+        "log.offset": 360, 
+        "message": "2017-07-31 13:46:55 EST [771-1] postgres@postgres FATAL:  the database system is starting up", 
+        "postgresql.log.core_id": "1", 
+        "postgresql.log.database": "postgres", 
+        "postgresql.log.level": "FATAL", 
+        "postgresql.log.message": "the database system is starting up", 
+        "postgresql.log.thread_id": "771", 
+        "postgresql.log.timestamp": "2017-07-31 13:46:55", 
+        "postgresql.log.timezone": "EST", 
+        "postgresql.log.user": "postgres"
+    }
+]
